--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,8 @@ body {
   width: 100%;
   height: 80px;
   padding-left: 20px;
+  color: blue;
+  box-shadow: 5px 5px 5px #999;
 }
 
 .leaderboard {
@@ -23,28 +25,23 @@ body {
   gap: 40px;
   padding: 1em;
 }
-
 .leaderboard .show-list {
   width: 60%;
   margin-top: 1em;
   height: 320px;
 }
-
 .leaderboard .show-list .show-list-head {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .leaderboard .show-list .show-list-head button {
   padding: 0.5em 1em;
 }
-
 .leaderboard .show-list #leaderboard {
   border: 1px solid black;
   height: 100%;
 }
-
 .leaderboard .add-item {
   width: 40%;
   height: 500px;
@@ -58,13 +55,16 @@ body {
   margin: 0.5em 10px 0.5em -30px;
 }
 
+.leaderboard-item:nth-child(odd) {
+  background-color: #e8ecec;
+}
+
 form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
 }
-
 form input[type=text],
 form input[type=number] {
   padding: 0.5em;
@@ -72,8 +72,9 @@ form input[type=number] {
   border-radius: 4px;
   width: 100%;
 }
-
 form input[type=submit] {
   padding: 0.5em 1em;
   align-self: flex-end;
 }
+
+/*# sourceMappingURL=style.css.map */
